--- a/lab4/calculator/styles.css
+++ b/lab4/calculator/styles.css
@@ -1,7 +1,7 @@
 body {
     font-family: 'Prompt', sans-serif;
-    background-color: #121212; /* Темный фон */
-    color: #fff; /* Белый текст */
+    background-color: #121212; 
+    color: #fff; 
     margin: 0;
     display: flex;
     align-items: center;
@@ -14,7 +14,7 @@ main {
 }
 
 .calc-container {
-    background-color: #fff; /* Белый фон контейнера калькулятора */
+    background-color: #fff; 
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     overflow: hidden;
@@ -29,12 +29,12 @@ main {
 }
 
 .screen {
-    background-color: #fff; /* Белый фон экрана */
+    background-color: #fff; 
     padding: 20px;
     font-family: 'Orbitron', sans-serif;
     font-size: 2em;
     border-bottom: 1px solid #ddd;
-    color: #333; /* Цвет текста на экране */
+    color: #333;
 }
 
 .screen span {
@@ -56,15 +56,15 @@ button {
     cursor: pointer;
     width: 70px;
     height: 70px;
-    font-size: 2em; /* Увеличил размер шрифта кнопок */
-    background-color: #333; /* Цвет кнопок */
-    color: #fff; /* Белый текст на кнопках */
+    font-size: 2em; 
+    background-color: #333;
+    color: #fff; 
 }
 
 
 .key {
-    background-color: #fff; /* Белый фон цифровых кнопок */
-    color: #333; /* Цвет текста на цифровых кнопках */
+    background-color: #fff; 
+    color: #333; 
 }
 
 .operation {
